2.0.2:
* segway: add window.bed output to cross reference window index to chromomsome
  region

2.0.1:
* segway: fix training results not being parsed properly due to validation
  defaults

2.0:
* segway: Add ability to use validation set to choose winner for training
  (activate using --validation-coords or --validation-fraction options)
  (thanks to Rachel Chan)

1.4.4:
* segway: Add mixture of Gaussians and variance floor functionality to Segway
  (thanks to Max Libbrecht, Oscar Rodriguez, and Rachel Chan)

1.4.3:
* segway: fix "bad interpreter: Text file busy" errors reported by submitted
  jobs

1.4.2:
* segway: training is now submitted as a segway-task
* segway: all observations are now written out to temporary storage. As a
  result, the --observation option has been disabled
* segway: disabled the erroneous --dinucleotide option
* segway: Change Segway to raise warning if running Segway in identify mode
  with non-zero verbosity.

1.4.1:
* segway: fix --bigBed for assemblies with alt chromosomes not being sorted
  correctly
* segway: --num-minibatch-windows can now be seeded with SEGWAY_RAND_SEED and
  will select the same windows with when given the same seed 
  (thanks to Rachel Chan)
* segway: fix --prior-strength option
* segway: local job submission now appends error logs instead of rewriting them
* segway: add resolution functionality for semisupervised mode 
  (thanks to Rachel Chan)
* segway: add 'annotate' as an alias for 'identify' (thanks to Rachel Chan)
* segway: fix memory leak due to DRMAA job templates not being deleted
* segway: change queueing functionality such that segway queues a shell file
  containing the to-be-queued arguments, instead of queueing the arguments
  themselves (thanks to Rachel Chan)
* segway: change output message to specify whether the job is queued or
  run locally (thanks to Rachel Chan)
* segway: work around a GMTK bug when indexing a genomic region with a number
  greater than 9999 (thanks to Rachel Chan)

1.4.0: