@@ -2024,9 +2024,14 @@ class Runner(object):
 
         observations = Observations(self)
 
-        # Use the first genomedata archive for locating windows
-        with Genome(self.genomedata_names[0]) as genome:
-            observations.locate_windows(genome)
+        # Use all genomedata archives for locating windows
+        genomes = [Genome(genomedata_name) for genomedata_name in
+                   self.genomedata_names]
+
+        observations.locate_windows(genomes)
+
+        for genome in genomes:
+            genome.close()
 
         self.windows = observations.windows
         self.validation_windows = observations.validation_windows
